--- a/01_html/foo.html
+++ b/01_html/foo.html
@@ -4,6 +4,7 @@
     <body>
         <h1>Foo</h1>
         <a href="index.html">index페이지로</a>
+        <a href="index.html">index페이지로</a>
     </body>
 
 
