--- a/01_html/01_text.html
+++ b/01_html/01_text.html
@@ -19,7 +19,7 @@
    
 
     <!--문단 태그-->
-    <!-- 개행문자/탭문자/공백문자는 모두 공백1로 처리된다. -->
+    <!-- 개행문자/탭문자/공백문자는 그룹지어  공백 하나로 처리된다. -->
     <p>
         안녕하세요, 반갑습니다. 
         날씨가 춥죠?
@@ -28,9 +28,23 @@
         안녕하세요, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;반갑습니다. <br/>
         날씨가 춥죠? <br/>
     </p>
-    
+
+    <!-- pre태그 -->
+    <!-- pre-formatted 개행/탭/공백을 모두 그대로 출력 -->
+    <pre style="font-family: 'Courier New', Courier, monospace;">
+        안녕하세요,                            반갑습니다. 
+        날씨가 춥죠?
+    </pre>
+    <!-- pre>code -->
+    <pre>
+        <code>
+        function foo(){
+            conosole.log('foo');
+        }  
+        </code>
+    </pre>
     <!-- 특수문자 표현 &문자 -->
-    <!-- http://kor.pe.kr/util/4/charmap2.htm -->
+    <!-- http://kor.pe.kr/util/4/charmap2.htm  확인-->
     <p>
         &lt; p &gt;	&lt;	&#47;p &gt;를 &quot;표현&quot;하기
     </p>
@@ -61,6 +75,6 @@
     <p>
         <strong><em>웹접근성</em></strong>은 정말 중요합니다.
     </p>
-    
+  
 </body>
 </html>
