CSS_박스모델/transform_transition/animation 추가

--- a/homework/test1.html
+++ b/homework/test1.html
@@ -6,8 +6,8 @@
  </head>
  <body>
 	<h1>소속 : KH정보교육원</h1>
-	<h3>이름 : 홍길동</h3>
-	<p>이메일 : honggd@gmail.com</p>
+	<h3>이름 : 천무진</h3>
+	<p>이메일 : anwls0276@naver.com</p>
 	<hr>
 	
 	<ul>
