https://github.com/chunmujin/web_client_workspaces.git

--- a/01_html/index.html
+++ b/01_html/index.html
@@ -38,6 +38,8 @@
             <li><a targrt="_top" href="08_iframe.html">iframe</a></li>
             <li><a targrt="_top" href="09_media.html">미디어 관련</a></li>
             <li><a targrt="_top" href="10_form.html">폼 관련</a></li>
+            <li><a targrt="_top" href="11_test.html">test 관련</a></li>
+            <li><a targrt="_top" href="12_test2.html">test2 관련</a></li>
 
         </ul>
     </body>
