TAILWINDCSS_기본 /jquery/dom/extend/css

--- a/04_jquery/08_muQuery.html
+++ b/04_jquery/08_muQuery.html
@@ -15,7 +15,7 @@
   
   <!-- 우리 라이브러리 -->
   <!-- <script src="js/jquery-3.7.1.js"></script> -->
-  <script src="js/shQuery-1.0.0.js"></script>
+  <script src="js/muQuery-1.0.0.js"></script>
   <!-- 페이지 스크립트 -->
   <script src="js/08_shQuery.js"></script>
 </body>
